--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="Styles.css">
 </head>
 <body>
-   <h1>Hi My Name is Daniel!
+   <h1>Hi My Name is Daniel
    </h1>
 </body>
 </html>
